--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
+@font-face {
+  font-family: "Garet Book";
+  src: url("fonts/Garet-Book.woff2");
+}
+
+/* Permanent Marker (for menu section title) */
+
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+
 /* green from logo! */
 /* #889672 */
 
@@ -292,10 +300,40 @@
 /* actual menu section */
 section.menu {
   margin-top: 9.4rem;
+  font-family: "Garet Book", Arial, Helvetica, sans-serif;
+}
+
+section.menu p.disclaimer {
+  opacity: 60%;
+  font-size: 1.2rem;
+  font-style: italic;
+  line-height: 1.6;
+  text-align: right;
+}
+
+section.menu p.disclaimer.left {
+  text-align: left;
+}
+
+section.menu p.disclaimer-top {
+  font-size: 1.2rem;
+  font-style: italic;
+  line-height: 1.2;
 }
 
 section.menu .menu {
   padding: 4.2rem 2.2rem;
+}
+
+section.menu .menu-hours-box {
+  /* width: 100%; */
+  width: 42rem;
+  display: flex;
+  gap: 4.8rem;
+}
+
+section.menu h3.menu-section {
+  margin-top: 2.4rem;
 }
 section.menu .menu-group-heading {
   margin: 0;
@@ -316,6 +354,7 @@ section.menu .menu-group {
 section.menu .menu-item {
   display: flex;
   max-width: 42rem;
+  margin-bottom: 1.8rem;
 }
 
 section.menu .menu-item-text {
@@ -334,9 +373,10 @@ section.menu .menu-item-name {
 }
 
 section.menu .menu-item-description {
-  margin-top: 2rem;
+  margin-top: 1rem;
   line-height: 1.6;
   font-size: 1.6rem;
+  color: #919191;
 }
 
 .menu .menu-item.side-box {
@@ -426,12 +466,32 @@ footer ul li a:visited {
   font-size: 3.2rem;
 }
 
-/* will use JS to fuck with this */
-.menu {
-  /* display: none; */
+/* COCKTAILS */
+section#drinks .menu-group-heading,
+#beer .menu-group-heading {
+  font-family: "Permanent Marker", serif;
+}
+section#brunch .menu-group,
+section#lunch .menu-group,
+section#dinner .menu-group {
+  /* background-color: pink; */
+  grid-template-columns: repeat(2, 1fr);
 }
 
-/* Lunch Menu */
-.menu-hours-box p {
-  display: inline-block;
+section#drinks .menu-group,
+section#beer .menu-group {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+section#drinks .menu-item,
+#beer .menu-item {
+  /* border: 1px solid hotpink; */
+  padding: 0.8rem;
+  padding-left: 0;
+}
+
+section#drinks .menu-item-description,
+#beer .menu-item-description {
+  font-family: "Garet Book", Arial, Helvetica, sans-serif;
+  color: rgba(146, 146, 146, 0.847);
 }
